test/MapperTestLibrary1/Error/CollectionMappingMethodDefineError.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using System;
using System.Collections.Concurrent;
using System.Collections.Generic;
using LightweightObjectMapper;

namespace MapperTestLibrary;

[MappingProfile]
internal partial class CollectionMappingMethodDefineErrorMappingProfile
{
    [CollectionMapping]
    public ConcurrentBag<T> CollectionMap1<T, T2>(IEnumerable<T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public ConcurrentBag<T> CollectionMap2<T>(IDictionary<int, T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public string CollectionMap3<T>(IEnumerable<T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public ConcurrentBag<T> CollectionMap4<T>(IEnumerable<T> items, int length)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public ConcurrentBag<T> CollectionMap5<T>(int index, IEnumerable<T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public Dictionary<int, T> CollectionMap6<T>(IEnumerable<T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public void CollectionMap7<T>(IEnumerable<T> items)
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public ConcurrentBag<T> CollectionMap8<T>()
    {
        throw new NotImplementedException();
    }

    [CollectionMapping]
    public ConcurrentBag<int> CollectionMap9(IEnumerable<int> items)
    {
        throw new NotImplementedException();
    }
}

#endif
